// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfrastructureCard should render correctly - no data 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-pf-content="true"
      >
        Infrastructure
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Type
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="ins-c-skeleton ins-c-skeleton__sm"
          >
             
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Vendor
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="ins-c-skeleton ins-c-skeleton__sm"
          >
             
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          IPv4 addresses
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="ins-c-skeleton ins-c-skeleton__sm"
          >
             
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          IPv6 addresses
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="ins-c-skeleton ins-c-skeleton__sm"
          >
             
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Interfaces/NICs
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="ins-c-skeleton ins-c-skeleton__sm"
          >
             
          </div>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`InfrastructureCard should render correctly with data 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-pf-content="true"
      >
        Infrastructure
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Type
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-type
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Vendor
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-vendor
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          IPv4 addresses
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <a
            href="http://localhost:5000//ipv4"
          >
            1 addresses
          </a>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          IPv6 addresses
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <a
            href="http://localhost:5000//ipv6"
          >
            1 addresses
          </a>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Interfaces/NICs
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <a
            href="http://localhost:5000//interfaces"
          >
            1 NICs
          </a>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`InfrastructureCard should render correctly with rhsm facts 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-pf-content="true"
      >
        Infrastructure
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Type
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          virtual
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Vendor
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          IPv4 addresses
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          None
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          IPv6 addresses
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          None
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Interfaces/NICs
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          None
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`InfrastructureCard should render enabled/disabled 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-pf-content="true"
      >
        Infrastructure
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Type
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-type
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Vendor
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-vendor
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          IPv4 addresses
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <a
            href="http://localhost:5000//ipv4"
          >
            1 addresses
          </a>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          IPv6 addresses
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <a
            href="http://localhost:5000//ipv6"
          >
            1 addresses
          </a>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Interfaces/NICs
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <a
            href="http://localhost:5000//interfaces"
          >
            1 NICs
          </a>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;
